// Detailed ClinVar Structural Variants.

syntax = "proto3";

package annonars.clinvar.sv;

import "annonars/clinvar_data/extracted_vars.proto";

// Record with overlap information.
message ResponseRecord {
    // The record.
    clinvar_data.extracted_vars.ExtractedVcvRecord record = 1;
    // The reciprocal overlap with the query.
    double overlap = 2;
}

// Information regarding the pagination.
message PageInfo {
    // The total number of records.
    uint32 total = 1;
    // The number of records per page.
    uint32 per_page = 2;
    // The current page number.
    uint32 current_page = 3;
    // The total number of pages.
    uint32 total_pages = 4;
}

// One page of results as returned by the server.
message ResponsePage {
    // The records in this page.
    repeated ResponseRecord records = 1;
    // Pagination information.
    PageInfo page_info = 2;
}
